fix(critical): payment tx-scoped HTTP call, order list pagination + N+1 hot paths
Nhom CRITICAL tu backend-architect review (commit 1/2):

1. PaymentServiceImpl.getStatus khong con giu DB transaction trong khi goi
   VNPay querydr (toi da 10s/request) — truoc day moi user cho thanh toan
   refresh trang giu 1 connection suot network call, du dong nguoi cho la
   can HikariCP pool va treo toan app. Phan apply ket qua tach vao
   PaymentResultApplier (transaction ngan rieng, cung pattern RefundLedger);
   bonus: re-read + status guard dong race "IPN xu ly xong trong luc cho querydr".

2. 3 endpoint list order (customer/admin/seller) chuyen sang pagination
   (PageResponse, size cap 100, sort whitelist) — GET /api/admin/orders truoc
   day load toan bo bang orders vao memory. @BatchSize(50) tren Order.items
   thay vi fetch-join (fetch-join collection + Pageable bi Hibernate paginate
   in-memory): page 20 orders = 2 query thay vi 21. Seller orders paginate o
   cap order qua EXISTS de order nhieu item khong bi tach trang.
   Composite index idx_orders_customer_id_created_at (V13) gio duoc su dung
   dung nhu benchmark trong docs/query-optimization.md du doan.

3. CartServiceImpl.toResponse bo N+1 (goi getActiveById tung item tren moi
   thao tac cart) — them ProductService.getActiveByIds batch 1 query IN,
   van qua service interface; behavior "san pham bi an -> loai khoi gio"
   giu nguyen nhung khong con dung exception lam control flow.

Breaking change API: list endpoints tra {content, page, size, totalElements,
totalPages} thay vi mang thuan.

(jwt.secret local da rotate — khong co thay doi commit vi file von gitignored)